<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">TwpMusic</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="findMusic">发现音乐</string>
    <string name="myMusic">我的音乐</string>
    <string name="desMusicPreImg">音乐预览图片</string>
    <string name="desPlayList">播放列表</string>
    <string name="desPlayOrPause">播放/暂停</string>
    <string name="desSetting">设置</string>
    <string name="desSearch">搜索</string>
    <string name="testMusicName">新不了情</string>
    <string name="testMusicAuthor">萧敬腾</string>
    <string name="testAblumName">爱的时刻自选辑</string>
    <string name="recommend">推荐</string>
    <string name="more">更多</string>
    <string name="login">请登入</string>
    <string name="userDes">一人一世界，一花一草木</string>
    <string name="testPlayListTitle">纯音乐</string>
    <string name="testPlayListNum">309首</string>
    <string name="playListNum">%1$d 首</string>
    <string name="myMusicList">我的歌单</string>
    <string name="title_activity_play_music">PlayMusicActivity</string>
    <string name="musicCurrentTime">3:40</string>
    <string name="musicTotalTime">5:30</string>
    <string name="localMusic">本地歌曲</string>
    <string name="downLoadedMusic">已经下载</string>
    <string name="cloudLikeMusic">云端收藏</string>
    <string name="title_activity_local_music">LocalMusicActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="localAllMusic">全部歌曲</string>
    <string name="artistBrowse">歌手浏览</string>
    <string name="dirBrowse">专辑浏览</string>
    <string name="allMusicStr">共%1$d首歌曲</string>
    <string name="deleteTip">删除操作</string>
    <string name="deleteConfirm">确定删除 %1$s 这首音乐吗?</string>
    <string name="yesDelete">删除</string>
    <string name="noBack">返回</string>
    <string name="emptyplaylist">没有数据</string>
    <string name="service_start_error_title">"播放问题"</string>
    <string name="service_start_error_msg">"无法播放此歌曲。"</string>

    <!-- Do not translate. Duration format for duration < 1 hour -->
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%5$02d</xliff:g></string>
    <!-- Do not translate. Duration format for duration >= 1 hour -->
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>
    <string name="normalPlay">顺序播放</string>
    <string name="nonePlay">当前循环</string>
    <string name="shufflePlay">随机播放</string>
    <string name="fast_scroll_alphabet">\u0020ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="title_activity_music_lists">MusicList</string>
    <string name="line">|</string>
    <string name="unkown_album">未知艺术家</string>

    <string name="notification_artist_album"><xliff:g id="album">%2$s</xliff:g>\n<xliff:g id="artist">%1$s</xliff:g></string>


</resources>
