<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dip">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="120dip"
            android:background="@drawable/ic_m_user_bg"
            android:padding="10dip">

            <ImageView
                android:id="@+id/imgUserIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_m_user_icon_bg"
                android:src="@drawable/ic_m_user_icon_default" />

            <!-- 未登录 -->
            <TextView
                style="@style/styleLoginStr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dip"
                android:layout_toRightOf="@id/imgUserIcon"
                android:text="@string/login" />

            <!-- 登入成功-->
            <TextView
                style="@style/styleUserDescStr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dip"
                android:layout_toRightOf="@id/imgUserIcon"
                android:text="@string/userDes"
                android:visibility="invisible" />
            <!-- Setting -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/ic_m_user_setting"
                android:contentDescription="@string/action_settings" />

        </RelativeLayout>

        <!-- list -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="175dip"
            android:background="@drawable/ic_playlist_item_3x_bg"
            android:orientation="vertical"
            android:weightSum="0.9">

            <include
                android:id="@+id/contentLocalMusic"
                layout="@layout/item_playlist_desc"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="0.3" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@drawable/ic_playlist_driver"
                android:contentDescription="@string/app_name" />

            <include
                android:id="@+id/contentDownMusic"
                layout="@layout/item_playlist_desc"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="0.3" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@drawable/ic_playlist_driver"
                android:contentDescription="@string/app_name" />

            <include
                android:id="@+id/contentCloudMusic"
                layout="@layout/item_playlist_desc"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="0.3" />
        </LinearLayout>

        <!--music list -->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="8dip"
            android:gravity="center">

            <TextView
                style="@style/styleMyMusicList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:gravity="left|center_vertical"
                android:text="@string/myMusicList" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/selector_m_playlist_add"
                android:src="@drawable/ic_m_playlist_add_btn" />
        </RelativeLayout>

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_playlist_item_bg"
            android:divider="@drawable/ic_playlist_driver"
            android:dividerHeight="1dip"
            android:visibility="invisible"/>



    </LinearLayout>
</ScrollView>
